Wed Apr 21 10:57:04 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/Makefile.CosLoadBalancing:

          Corrected an error, which was to remove an include
          of a file which is not checked-in yet.

Wed Apr 21 12:11:21 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1495_Regression:
          Added this new test. This test is written by Will Otte
          <wotte@dre.vanderbilt.edu>. This tests when a forward location
          from a remote servant to a collocated servant is done, also
          the collocated path for the invocation to the collocated
          servant is taken. This test will fail at this moment but
          when I commit my changes it will run without problems.

Wed Apr 21 09:02:13 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Domain.pidl:
          Updated regeneration message

Wed Apr 21 08:12:31 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/driver/drv_args.cpp:
          Added missing space to the usage message of -Gd

Tue Apr 20 19:11:16 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Load_Average_Monitor.h:
        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Load_Average_Monitor.cpp:

          As a result of the new CPU utilization monitor,
          the old CPU load average monitor is moved to this new
          file and new class definitions.

Tue Apr 20 19:05:02 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.h:
        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.cpp:

          Added a new load monitor in the TAO load balancing
          service.

          This monitor reports the CPU load in terms of utilization
          percentage.

          Right now, i have got implementations for Linux versions
          and i am in the process of writing Windows version of the same.
