@@ -1,3 +1,11 @@
+Wed Apr 21 11:08:22 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * orbsvcs/LoadBalancer/LoadMonitor.cpp:
+        * orbsvcs/LoadBalancer/Makefile.LoadMonitor:
+
+          Corrected an error, which was to include the correct
+          .h and .cpp files.
+
 Wed Apr 21 10:57:04 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * orbsvcs/orbsvcs/Makefile.CosLoadBalancing:
